unpackaged/main/default/objects/LH__Lookup_Helper_Filter_Group__c/LH__Lookup_Helper_Filter_Group__c.object-meta.xml
<CustomObject>
    <label>Lookup Helper Filter Group</label>
    <nameField>
        <displayFormat>FG-{00000000}</displayFormat>
        <label>Lookup Helper Filter Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Helper Filter Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>