unpackaged/main/default/objects/LH__Lookup_Helper_Filter_Group__c/fields/LH__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>LH__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <type>TextArea</type>
</CustomField>