unpackaged/main/default/objects/LH__Lookup_Helper_Filter_Group__c/fields/LH__Test_Dupe_Label_Lookup__c.field-meta.xml
<CustomField>
    <fullName>LH__Test_Dupe_Label_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Logic</label>
    <referenceTo>LH__Lookup_Helper_Filter_Group__c</referenceTo>
    <relationshipLabel>Lookup Helper Filter Groups</relationshipLabel>
    <relationshipName>TestFilterLogic</relationshipName>
    <type>Lookup</type>
</CustomField>